[package]
name = "jeremiah"
description = "stupid robot nuisance. now in 3d!"
readme = "README.md"
version = "0.1.1"
edition = "2021"
authors = ["Clover Johnson", "Phoebe Kielbasinski"]

[package.metadata.v5]
slot = 1
icon = "pizza"
compress = true

[dependencies]
anyhow = { version = "1.0.89", default-features = false }
embedded-graphics = "0.8.1"
vexide = { version = "0.4.0", features = ["embedded-graphics"] }
