[package]
name = "jeremiah"
description = "stupid robot nuisance. now in 3d!"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/MiniKielbyM/jeremiah/"
version = "0.1.1"
edition = "2021"
authors = ["Clover Johnson", "Phoebe Kielbasinski"]

[package.metadata.v5]
slot = 1
icon = "pizza"
compress = true

[dependencies]
anyhow = { version = "1.0.89", default-features = false }
#libm = "0.2.8"
vexide = "0.4.0"
